# Sistema-de-Escalas

./: README.md  package.json  pyproject.toml  replit.md
Projeto Escalas de Trabalho/: CRITICAS AO CODIGO DESENVOLVIDO PELO REPLIT.docx  DESENVOLVENDO APLICATIVO PARA GERIR ESCALAS DE TRABALHO.docx  ESCALAS_VERSAO_EXECUTIVA.docx  ESCALAS_VERSAO_TECNICA_PROGRAMADORES.docx  ESPECIFICACAO_COMPLETA_AGENTES_ESCALAS - GPT.docx
attached_assets/: CHECKIN_24DEZa09JAN26_(1)_1768167810408.csv  CHECKOUT_24DEZa09JAN26_(1)_1768167810409.csv  Check-ins_09jan25_(1)_1768167810410.csv  Check-outs_09jan25_(1)_1768167810410.csv  INSTRUCOES_REPLIT_REVISADAS_BASE_DADOS_MULTISETOR_V4_(1)_1766404960231.docx  PROMPT_MODULO_INTELIGENCIA_RELATORIOS_REPLIT_1765139746694.txt  Pasted--PROMPT-B-Cadastro-de-Regra-Trabalhista-campos-do-formu_1768936262336.txt  Pasted--PROMPT-HOTFIX-DEFINITIVO-HP-DATETIME-copiar-colar-PROM_1766619620350.txt  Pasted--PROMPT-PRINCIPAL-PARA-O-REPLIT-CONSTRU-O-DO-AGENTE-DE-_1765061276176.txt  Pasted-CONTEXTO-DO-PROJETO-Voc-est-trabalhando-em-um-agente-pa_1766357208907.txt  Pasted-CONTEXTO-Estamos-construindo-um-agente-no-Replit-para-g_1766525099191.txt  Pasted-CONTEXTO-Estamos-construindo-um-agente-para-planejament_1766596678632.txt  Pasted-CONTEXTO-Estamos-construindo-um-agente-sistema-para-ela_1766406458831.txt  Pasted-CONTEXTO-Estamos-desenvolvendo-um-agente-Replit-para-ge_1766508833322.txt  Pasted-CONTEXTO-Estou-construindo-um-sistema-agente-para-gest-_1766354498131.txt  Pasted-CONTEXTO-O-agente-de-c-lculo-de-escalas-j-possui-Data-L_1766593641249.txt  (+30 more)
backend/: main.py
(+185 files in other folders)
